corrigindo referencias as imagens2

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   <div class="img-hover">
                     <img
                       class="img-fluid rounded mb-4 mb-lg-0"
-                      src="/assets/images/landindPageMainImg.png"
+                      src="./assets/images/landindPageMainImg.png"
                       alt="Imagem de exemplo"
                     />
                   </div>
@@ -132,7 +132,7 @@
                   <div class="img-hover">
                     <img
                       class="img-fluid rounded mb-4 mb-lg-0"
-                      src="/assets/images/landindPageMainImg.png"
+                      src="./assets/images/landindPageMainImg.png"
                       alt="Outro Slide"
                     />
                   </div>
@@ -155,7 +155,7 @@
                   <div class="img-hover">
                     <img
                       class="img-fluid rounded mb-4 mb-lg-0"
-                      src="/assets/images/landindPageMainImg.png"
+                      src="./assets/images/landindPageMainImg.png"
                       alt="Mais Um Slide"
                     />
                   </div>
@@ -249,20 +249,20 @@
 
     <!-- Footer -->
     <footer class="footer bg-footer py-4 text-white">
-        <div class="container-fluid px-5 text-center">
-          <p class="mb-2">
-            &copy; 2025 Plano Certo Corretora de Seguros LTDA. Todos os direitos
-            reservados.
-          </p>
-          <p class="mb-0">
-            Rua Desembargador Rafael Fleury Ferraz de Sampaio, 213 - 05171-580 -
-            São Paulo/SP<br />
-            (11) 2925 - 4500 | (11) 2476 - 2646 | (11) 98314-4586<br />
-            <a href="mailto:planocertoseguros@uol.com.br" class="text-white">
-              planocertoseguros@uol.com.br
-            </a>
-          </p>
-        </div>
-      </footer>
+      <div class="container-fluid px-5 text-center">
+        <p class="mb-2">
+          &copy; 2025 Plano Certo Corretora de Seguros LTDA. Todos os direitos
+          reservados.
+        </p>
+        <p class="mb-0">
+          Rua Desembargador Rafael Fleury Ferraz de Sampaio, 213 - 05171-580 -
+          São Paulo/SP<br />
+          (11) 2925 - 4500 | (11) 2476 - 2646 | (11) 98314-4586<br />
+          <a href="mailto:planocertoseguros@uol.com.br" class="text-white">
+            planocertoseguros@uol.com.br
+          </a>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
