--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Plano Certo Seguradora</title>
 
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/logo.png" />
 
     <!-- Bootstrap CSS -->
     <link
