--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <img src="assets/images/logo.png" alt="Logo" class="nav-bar-logo" />
 
         <button
-          class="navbar-toggler"
+          class="navbar-toggler ms-auto"
           type="button"
           data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent"
