melhoria na navegação do carrossel

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Plano Certo Seguradora</title>
 
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="./assets/images/logo.png" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/logoSemTexto.png" />
 
     <!-- Bootstrap CSS -->
     <link
@@ -114,11 +114,10 @@
                 </div>
                 <div class="col-lg-5">
                   <h1 class="font-weight-light">
-                    Plano Certo <br />Corretora de Seguros
+                    Quem somos
                   </h1>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quidem neque consectetur delectus corrupti dolores.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis quasi tempore consequuntur. Neque aperiam vitae dolorem numquam nihil id nesciunt perferendis, dolor quia velit incidunt veniam unde ullam quae. Nostrum?
                   </p>
                   <a class="btn btn-custom" href="#!">Saiba mais</a>
                 </div>
@@ -140,8 +139,7 @@
                 <div class="col-lg-5">
                   <h1 class="font-weight-light">Produtos</h1>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Necessitatibus doloribus natus harum minima rerum explicabo.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum voluptate reprehenderit porro obcaecati, temporibus, est a culpa accusamus explicabo dolor consequuntur repudiandae at! Enim porro qui officiis magni maiores corporis.
                   </p>
                   <a class="btn btn-custom" href="#!">Ver produtos</a>
                 </div>
@@ -163,8 +161,7 @@
                 <div class="col-lg-5">
                   <h1 class="font-weight-light">Fale conosco</h1>
                   <p>
-                    Aqui você pode adicionar outro conteúdo relacionado ao seu
-                    serviço ou produto.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit commodi est earum nostrum ullam architecto nam, magni soluta mollitia in aut quaerat laudantium neque iure ut quisquam culpa veniam?
                   </p>
                   <a class="btn btn-custom" href="#!">Entrar em contato!</a>
                 </div>
