cards centralizados com sucesso 2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <title>Plano Certo Seguradora</title>
 
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="./assets/images/logoSemTexto.png" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./assets/images/logoSemTexto.png"
+    />
 
     <!-- Bootstrap CSS -->
     <link
@@ -113,11 +117,12 @@
                   </div>
                 </div>
                 <div class="col-lg-5">
-                  <h1 class="font-weight-light">
-                    Quem somos
-                  </h1>
+                  <h1 class="font-weight-light">Quem somos</h1>
                   <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis quasi tempore consequuntur. Neque aperiam vitae dolorem numquam nihil id nesciunt perferendis, dolor quia velit incidunt veniam unde ullam quae. Nostrum?
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Perferendis quasi tempore consequuntur. Neque aperiam vitae
+                    dolorem numquam nihil id nesciunt perferendis, dolor quia
+                    velit incidunt veniam unde ullam quae. Nostrum?
                   </p>
                   <a class="btn btn-custom" href="#!">Saiba mais</a>
                 </div>
@@ -139,7 +144,11 @@
                 <div class="col-lg-5">
                   <h1 class="font-weight-light">Produtos</h1>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum voluptate reprehenderit porro obcaecati, temporibus, est a culpa accusamus explicabo dolor consequuntur repudiandae at! Enim porro qui officiis magni maiores corporis.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Rerum voluptate reprehenderit porro obcaecati, temporibus,
+                    est a culpa accusamus explicabo dolor consequuntur
+                    repudiandae at! Enim porro qui officiis magni maiores
+                    corporis.
                   </p>
                   <a class="btn btn-custom" href="#!">Ver produtos</a>
                 </div>
@@ -161,7 +170,10 @@
                 <div class="col-lg-5">
                   <h1 class="font-weight-light">Fale conosco</h1>
                   <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur sit commodi est earum nostrum ullam architecto nam, magni soluta mollitia in aut quaerat laudantium neque iure ut quisquam culpa veniam?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consequuntur sit commodi est earum nostrum ullam architecto
+                    nam, magni soluta mollitia in aut quaerat laudantium neque
+                    iure ut quisquam culpa veniam?
                   </p>
                   <a class="btn btn-custom" href="#!">Entrar em contato!</a>
                 </div>
@@ -183,50 +195,58 @@
         </div>
 
         <!-- Content Row -->
-        <div class="row gx-4 gx-lg-5">
-          <div class="col-md-4 mb-5">
-            <div class="card h-100">
-              <div class="card-body">
-                <h2 class="card-title">Quem somos?</h2>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
-                  magni quas ex numquam, maxime minus quam molestias corporis
-                  quod, ea minima accusamus.
-                </p>
-              </div>
-              <div class="card-footer">
-                <a class="btn btn-custom2 btn-sm" href="#!">Mais Informações</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-5">
-            <div class="card h-100">
-              <div class="card-body">
-                <h2 class="card-title">Produtos</h2>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod
-                  tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem
-                  sunt quam eaque, vel, non in id dolore voluptates quos
-                  eligendi labore.
-                </p>
-              </div>
-              <div class="card-footer">
-                <a class="btn btn-custom2 btn-sm" href="#!">Mais Informações</a>
+        <div class="info-div">
+          <div class="row gx-4 gx-lg-5 info-row">
+            <div class="col-md-4 mb-5">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h2 class="card-title">Quem somos?</h2>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Rem magni quas ex numquam, maxime minus quam molestias
+                    corporis quod, ea minima accusamus.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a class="btn btn-custom2 btn-sm" href="#!"
+                    >Mais Informações</a
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-4 mb-5">
-            <div class="card h-100">
-              <div class="card-body">
-                <h2 class="card-title">Fale conosco</h2>
-                <p class="card-text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
-                  magni quas ex numquam, maxime minus quam molestias corporis
-                  quod, ea minima accusamus.
-                </p>
+            <div class="col-md-4 mb-5">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h2 class="card-title">Produtos</h2>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Quod tenetur ex natus at dolorem enim! Nesciunt pariatur
+                    voluptatem sunt quam eaque, vel, non in id dolore voluptates
+                    quos eligendi labore.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a class="btn btn-custom2 btn-sm" href="#!"
+                    >Mais Informações</a
+                  >
+                </div>
               </div>
-              <div class="card-footer">
-                <a class="btn btn-custom2 btn-sm" href="#!">Mais Informações</a>
+            </div>
+            <div class="col-md-4 mb-5">
+              <div class="card h-100">
+                <div class="card-body">
+                  <h2 class="card-title">Fale conosco</h2>
+                  <p class="card-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Rem magni quas ex numquam, maxime minus quam molestias
+                    corporis quod, ea minima accusamus.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a class="btn btn-custom2 btn-sm" href="#!"
+                    >Mais Informações</a
+                  >
+                </div>
               </div>
             </div>
           </div>
