alteração no carrossel para efeito de slide

--- a/index.html
+++ b/index.html
@@ -73,114 +73,102 @@
       <!-- Heading Row -->
       <div class="row gx-4 gx-lg-5 align-items-center my-5">
         <!-- Carrossel -->
-        <div
-          id="carouselExampleFade"
-          class="carousel slide carousel-fade"
-          data-bs-ride="carousel"
-        >
-          <!-- Indicadores -->
-          <div class="carousel-indicators">
-            <button
-              type="button"
-              data-bs-target="#carouselExampleFade"
-              data-bs-slide-to="0"
-              class="active"
-              aria-current="true"
-              aria-label="Slide 1"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#carouselExampleFade"
-              data-bs-slide-to="1"
-              aria-label="Slide 2"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#carouselExampleFade"
-              data-bs-slide-to="2"
-              aria-label="Slide 3"
-            ></button>
-          </div>
+        <div id="carouselExampleFade" class="carousel slide" data-bs-ride="carousel">
+  <!-- Indicadores -->
+  <div class="carousel-indicators">
+    <button
+      type="button"
+      data-bs-target="#carouselExampleFade"
+      data-bs-slide-to="0"
+      class="active"
+      aria-current="true"
+      aria-label="Slide 1"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleFade"
+      data-bs-slide-to="1"
+      aria-label="Slide 2"
+    ></button>
+    <button
+      type="button"
+      data-bs-target="#carouselExampleFade"
+      data-bs-slide-to="2"
+      aria-label="Slide 3"
+    ></button>
+  </div>
 
-          <!-- Slides -->
-          <div class="carousel-inner">
-            <!-- Slide 1 -->
-            <div class="carousel-item active">
-              <div class="row gx-4 gx-lg-5 align-items-center">
-                <div class="col-lg-7">
-                  <div class="img-hover">
-                    <img
-                      class="img-fluid rounded mb-4 mb-lg-0"
-                      src="./assets/images/landindPageMainImg.png"
-                      alt="Imagem de exemplo"
-                    />
-                  </div>
-                </div>
-                <div class="col-lg-5">
-                  <h1 class="font-weight-light">Quem somos</h1>
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Perferendis quasi tempore consequuntur. Neque aperiam vitae
-                    dolorem numquam nihil id nesciunt perferendis, dolor quia
-                    velit incidunt veniam unde ullam quae. Nostrum?
-                  </p>
-                  <a class="btn btn-custom" href="#!">Saiba mais</a>
-                </div>
-              </div>
-            </div>
-
-            <!-- Slide 2 -->
-            <div class="carousel-item">
-              <div class="row gx-4 gx-lg-5 align-items-center">
-                <div class="col-lg-7">
-                  <div class="img-hover">
-                    <img
-                      class="img-fluid rounded mb-4 mb-lg-0"
-                      src="./assets/images/landindPageMainImg.png"
-                      alt="Outro Slide"
-                    />
-                  </div>
-                </div>
-                <div class="col-lg-5">
-                  <h1 class="font-weight-light">Produtos</h1>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Rerum voluptate reprehenderit porro obcaecati, temporibus,
-                    est a culpa accusamus explicabo dolor consequuntur
-                    repudiandae at! Enim porro qui officiis magni maiores
-                    corporis.
-                  </p>
-                  <a class="btn btn-custom" href="#!">Ver produtos</a>
-                </div>
-              </div>
-            </div>
-
-            <!-- Slide 3 -->
-            <div class="carousel-item">
-              <div class="row gx-4 gx-lg-5 align-items-center">
-                <div class="col-lg-7">
-                  <div class="img-hover">
-                    <img
-                      class="img-fluid rounded mb-4 mb-lg-0"
-                      src="./assets/images/landindPageMainImg.png"
-                      alt="Mais Um Slide"
-                    />
-                  </div>
-                </div>
-                <div class="col-lg-5">
-                  <h1 class="font-weight-light">Fale conosco</h1>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Consequuntur sit commodi est earum nostrum ullam architecto
-                    nam, magni soluta mollitia in aut quaerat laudantium neque
-                    iure ut quisquam culpa veniam?
-                  </p>
-                  <a class="btn btn-custom" href="#!">Entrar em contato!</a>
-                </div>
-              </div>
-            </div>
+  <!-- Slides -->
+  <div class="carousel-inner">
+    <!-- Slide 1 -->
+    <div class="carousel-item active">
+      <div class="row gx-4 gx-lg-5 align-items-center">
+        <div class="col-lg-7">
+          <div class="img-hover">
+            <img
+              class="img-fluid rounded mb-4 mb-lg-0"
+              src="./assets/images/landindPageMainImg.png"
+              alt="Imagem de exemplo"
+            />
           </div>
         </div>
+        <div class="col-lg-5">
+          <h1 class="font-weight-light">Quem somos</h1>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Perferendis quasi tempore consequuntur...
+          </p>
+          <a class="btn btn-custom" href="#!">Saiba mais</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Slide 2 -->
+    <div class="carousel-item">
+      <div class="row gx-4 gx-lg-5 align-items-center">
+        <div class="col-lg-7">
+          <div class="img-hover">
+            <img
+              class="img-fluid rounded mb-4 mb-lg-0"
+              src="./assets/images/landindPageMainImg.png"
+              alt="Outro Slide"
+            />
+          </div>
+        </div>
+        <div class="col-lg-5">
+          <h1 class="font-weight-light">Produtos</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum voluptate...
+          </p>
+          <a class="btn btn-custom" href="#!">Ver produtos</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Slide 3 -->
+    <div class="carousel-item">
+      <div class="row gx-4 gx-lg-5 align-items-center">
+        <div class="col-lg-7">
+          <div class="img-hover">
+            <img
+              class="img-fluid rounded mb-4 mb-lg-0"
+              src="./assets/images/landindPageMainImg.png"
+              alt="Mais Um Slide"
+            />
+          </div>
+        </div>
+        <div class="col-lg-5">
+          <h1 class="font-weight-light">Fale conosco</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Consequuntur sit commodi est earum...
+          </p>
+          <a class="btn btn-custom" href="#!">Entrar em contato!</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
         <!-- Call to Action -->
         <div class="card my-5 py-4 text-center">
