--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     ></script>
 
     <!-- CSS Personalizado -->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="css/index.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Navbar -->
