--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <a class="nav-link active" aria-current="page" href="#!">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#!">Quem somos</a>
+              <a class="nav-link" href="/pages/quem-somos.html">Quem somos</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="#!">Produtos</a></li>
             <li class="nav-item">
